--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,13 @@
+// vercel.json
 {
   "version": 2,
-  "name": "centrika-neobank-api",
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
   "functions": {
-    "api/index.js": {
-      "maxDuration": 60
+    "api/**/*.js": {
+      "runtime": "nodejs18.x",
+      "maxDuration": 10
     }
-  }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1.js" }
+  ]
 }
